@@ -1,3 +1,7 @@
+* 2013-07-22 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 27663: Always include ORDER BY columns in SELECT clause when using UNION SELECTs 
+
 * 2013-07-22 - thorben.betten@open-xchange.com
 
  - Fix for bug 27669: Added null guard when counting SIEVE action commands
